menu on IE fix - :initial not supported by IE... despite being around for years

--- a/_front-end/src/assets/toolkit/styles/components/_nav-list.scss
+++ b/_front-end/src/assets/toolkit/styles/components/_nav-list.scss
@@ -31,3 +31,9 @@
     }
   }
 }
+
+// ugghh IE fix your flexbox >_<
+@media all and (-ms-high-contrast:none) {
+  // .nav-list > .item { height: 45px; width: 110px; } /* IE10 */
+  // *::-ms-backdrop, .nav-list > .item {height: 45px; width: 110px; } /* IE11 */
+}
